<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="63sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clock" />

    <TextClock
        android:id="@+id/clock"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/red_circle"
        android:format12Hour="HH:mm:ss"
        android:format24Hour="HH:mm:ss"
        android:gravity="center_vertical"
        android:hint="@string/clock_hint"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="147dp"
        android:contentDescription="@string/logo_description"
        android:scaleY="1.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/splash_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxEms="27"
        android:rotation="-2.229"
        android:text="@string/dynamic_placeholder"
        android:textAlignment="center"
        android:textColor="@color/splash_text_yellow"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_view"
        app:layout_constraintEnd_toStartOf="@+id/splash_center"
        app:layout_constraintStart_toStartOf="@+id/splash_center"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/splash_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="630dp" />

    <android.widget.Button
        android:id="@+id/start_button"
        android:layout_width="450dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/selectable"
        android:text="@string/start"
        android:textColor="@color/dark_text"
        android:textSize="54sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <EditText
        android:id="@+id/match_number"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/selectable"
        android:ems="10"
        android:hint="@string/match_num_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/team_number"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selectable"
        android:ems="10"
        android:hint="@string/team_num_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingHorizontal="10dp"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_number"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reminder"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_number" />

    <EditText
        android:id="@+id/name"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/selectable"
        android:ems="10"
        android:hint="@string/name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>