<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="187dp"
        android:layout_height="168dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <include
        layout="@layout/abort_layout"
        android:layout_width="@dimen/abort_width"
        android:layout_height="@dimen/abort_height"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toTopOf="@+id/logo2"
        app:layout_constraintEnd_toEndOf="@+id/logo2"
        app:layout_constraintStart_toStartOf="@+id/logo2" />

    <TextView
        android:id="@+id/match_num_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/match_num_display"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/logo2"
        app:layout_constraintTop_toTopOf="@+id/logo2" />

    <TextView
        android:id="@+id/team_num_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_num_display"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/logo2"
        app:layout_constraintTop_toBottomOf="@+id/match_num_display" />

    <TextView
        android:id="@+id/stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_stage"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/logo2"
        app:layout_constraintTop_toBottomOf="@+id/team_num_display" />

</androidx.constraintlayout.widget.ConstraintLayout>