<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        layout="@layout/field_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <include
        layout="@layout/match_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.widget.Button
        android:id="@+id/done_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/selectable"
        android:contentDescription="@string/done"
        android:textColor="@color/dark_text"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@id/field"
        app:layout_constraintEnd_toStartOf="@id/field" />

    <TextView
        android:id="@+id/done_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/above_button_elevation"
        android:importantForAccessibility="no"
        android:text="@string/done"
        android:textColor="@color/dark_text"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/done_button"
        app:layout_constraintStart_toStartOf="@+id/done_button"
        app:layout_constraintTop_toTopOf="@+id/done_button" />

    <ImageView
        android:id="@+id/done_arrow"
        android:layout_width="59dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:elevation="@dimen/above_button_elevation"
        android:importantForAccessibility="no"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="@+id/done_button"
        app:layout_constraintEnd_toEndOf="@+id/done_button"
        app:layout_constraintStart_toStartOf="@+id/done_button"
        app:srcCompat="@drawable/arrow" />

    <SeekBar
        android:id="@+id/climb_slider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="366dp"
        android:layout_height="95dp"
        android:layout_marginStart="424dp"
        android:layout_marginTop="132dp"
        android:background="@color/dark_gray"
        android:max="5"
        android:paddingStart="30dip"
        android:paddingEnd="30dip"
        android:progress="3"
        android:progressDrawable="@drawable/seekbar_track"
        android:thumb="@drawable/seekbar_thumb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tickMark="@null" />

    <TextView
        android:id="@+id/climb_slider_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climb_slider_min"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/climb_slider"
        app:layout_constraintTop_toTopOf="@+id/climb_slider" />

    <TextView
        android:id="@+id/climb_slider_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climb_slider_max"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@id/climb_slider"
        app:layout_constraintTop_toTopOf="@id/climb_slider" />

    <TextView
        android:id="@+id/climb_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/dark_gray"
        android:padding="10dp"
        android:text="@string/climb"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/climb_slider"
        app:layout_constraintEnd_toEndOf="@+id/climb_slider"
        app:layout_constraintStart_toStartOf="@+id/climb_slider" />

    <SeekBar
        android:id="@+id/defense_slider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="366dp"
        android:layout_height="95dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="50dp"
        android:background="@color/dark_gray"
        android:max="5"
        android:paddingStart="30dip"
        android:paddingEnd="30dip"
        android:progress="3"
        android:progressDrawable="@drawable/seekbar_track"
        android:thumb="@drawable/seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tickMark="@null" />

    <TextView
        android:id="@+id/defense_slider_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climb_slider_min"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/defense_slider"
        app:layout_constraintTop_toTopOf="@+id/defense_slider" />

    <TextView
        android:id="@+id/defense_slider_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defense_slider_max"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/defense_slider"
        app:layout_constraintTop_toTopOf="@+id/defense_slider" />

    <TextView
        android:id="@+id/defense_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/dark_gray"
        android:padding="10dp"
        android:text="@string/defense"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/defense_slider"
        app:layout_constraintEnd_toEndOf="@+id/defense_slider"
        app:layout_constraintStart_toStartOf="@+id/defense_slider" />

</androidx.constraintlayout.widget.ConstraintLayout>